Renaming Files, updating CSS
Updates to h1 tag, renaming files and redirecting paths.

--- a/views/app_layout.erb
+++ b/views/app_layout.erb
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My App</title>
-    <link rel="stylesheet" type="text/css" href="/position.css">
+    <title>My Colorful Boxes App</title>
+    <link rel="stylesheet" type="text/css" href="colorfulboxstyle.css">
   </head>
   <body>
     <%= yield %>
