--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
-<h1>Box Color App</h1>
+<h1>Colorful Boxes App</h1>
 
 <form method="post" action="/box">
   What color do you want your big box to be?<br>
